--- a/css/rsens.css
+++ b/css/rsens.css
@@ -57,13 +57,13 @@
 	.col{
 		padding-right:5px;
 		padding-left:5px;
-		margin-left: 5px;
-		margin-right: 5px;
 	}
 
 	.row{
 		padding-bottom: 5px;
 		padding-top: 5px;
+		padding-right:5px;
+		padding-left:5px;
 	}
 	
 	.infoText{
