--- a/css/rsens.css
+++ b/css/rsens.css
@@ -18,7 +18,6 @@
 
 	.guage{
 		background-color: #007FDF;
-		margin: 5px;
 	}
 	
 		
@@ -56,14 +55,14 @@
 	}
 
 	.col{
-		padding-right:5px;
-		padding-left:5px;
+		/*padding-right:5px;
+		padding-left:5px;*/
 		border: 5px solid red;
 	}
 
 	.row{
-		padding-bottom: 5px;
-		padding-top: 5px;
+		/*padding-bottom: 5px;
+		padding-top: 5px;*/
 	}
 	
 	.infoText{
