--- a/css/rsens.css
+++ b/css/rsens.css
@@ -55,8 +55,8 @@
 	}
 
 	.col{
-		/*padding-right:5px;
-		padding-left:5px;*/
+		padding-right:5px;
+		padding-left:5px;
 		/*border: 5px solid red;*/
 	}
 
