--- a/css/rsens.css
+++ b/css/rsens.css
@@ -59,6 +59,11 @@
 		padding-left:10px;
 		/*border: 5px solid red;*/
 	}
+	
+	.col:not(:first-child,:last-child) {
+		padding-right:5px;
+		padding-left:5px;
+	}
 
 	.row{
 		padding-bottom: 5px;
