--- a/css/rsens.css
+++ b/css/rsens.css
@@ -60,6 +60,12 @@
 		/*border: 5px solid red;*/
 	}
 	
+	.col1{
+		padding-right: 5px;
+		padding-left: 5px;
+		/*border: 5px solid red;*/
+	}
+	
 	.col:not(:first-child,:last-child) {
 		padding-right:5px;
 		padding-left:5px;
