--- a/css/rsens.css
+++ b/css/rsens.css
@@ -63,7 +63,16 @@
 	.col1{
 		padding-right: 5px;
 		padding-left: 5px;
-		/*border: 5px solid red;*/
+	}
+	
+	.colL{
+		padding-left: 10px;
+		padding-right: 5px;
+	}
+	
+	.colR{
+		padding-right: 10px;
+		padding-left: 5px;
 	}
 	
 	.col:not(:first-child,:last-child) {
